updated lololol. The style now looks neat!

--- a/index.html
+++ b/index.html
@@ -10,25 +10,18 @@
 <body>
     <header class="spacer">
         <div class="nav">
-            <ul>
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="./website/documentation.html">Documentation</a></li>
-                <li>
-                    <div class="dropdown">
-                        <button class="dropbtn">Contact</button>
-                        <div class="dropdown-content">
-                            <a href="https://github.com/MikOS-ProgrammingLanguage/Mik-ProgrammingLanguage" target="_blank"><img src="./website/style/imgs/iconmonstr-github-3-240.png" width="20" height="20"> Github</a>
-                            <a href="#" target="_blank"><img src="./website/style/imgs/iconmonstr-youtube-8-240.png" width="20" height="20"> Youtube</a>
-                            <a href="#" target="_blank"><img src="./website/style/imgs/iconmonstr-discord-3-240.png" width="20" height="20"> Discord</a>
-                            <a href="#" target="_blank"><img src="./website/style/imgs/iconmonstr-twitter-3-240.png" width="20" height="20"> Twitter</a>
-			    <a href="#" target="_blank">☞Portfolio</a>
-                        </div>
-                      </div>
-                </li>
-                <li><a href="#">Download</a></li>
-            </ul>
-        </div>
-        <h2 class="home-btn"><a href="index.html">MIK</a></h2>
+            <input type="checkbox">
+              <span></span>
+              <span></span>
+              <div class="menu">
+                <li><a id="active" href="#">home</a></li>
+                <li><a href="./website/about.html">about</a></li>
+                <li><a href="./website/documentation.html">documentation</a></li>
+                <li><a href="./website/Download.html">download</a></li>
+                <li><a href="#">blog</a></li>
+                <li><a href="#">contact</a></li>
+              </div>
+          </div>
     </header>
     <div class="article">
         <h1>The MIK programming language</h1>
