--- a/website/learn_mik.html
+++ b/website/learn_mik.html
@@ -97,7 +97,7 @@ int* i   // makes a pointer to an int named i
 i ?= &test  // i now has the address of test and therefore it's value
 *i ?= 10    // this also works. Instead of swithing the address of i, the memory address of i now has the value 10</pre>
             </blockquote>
-            <p>Note, however, that you can use as many pointers as you want. Hence 'int***** i' is also legal. You just need the same amount of asterisks to give it a new value. '&' however can only be used once. That's because you can't really get the memmory address of a memory address.</p>
+            <p>Note however, that you can use as many pointers as you want. Hence 'int***** i' is also legal. You just need the same amount of asterisks to give it a new value. '&' on the other hand can only be used once. That's because you can't really get the memmory address of a memory address.</p>
         </div>
 
         <!--Functions-->
