Made it look a bit better

--- a/website/about.html
+++ b/website/about.html
@@ -47,7 +47,7 @@
             <!--what goals-->
             <div class="article-doc">
                 <h2 class="function">mik.what.goals()</h2>
-                <p>The main goal of MIK currently is and allways will be versatile. That includes:</p>
+                <p>The main goal of MIK currently is and allways will be to be versatile. That includes:</p>
 
                 <h2 class="function">mik.customizable.syntax()</h2>
                 <p>We plan on implementing a config file, in which you can specify the syntax of MIK. You will be able to customize the following keywords:</p>
@@ -84,7 +84,7 @@ func add(int_type a, int_type b) -> int_type {
 
                 <h2 class="function">mik.compiling.targets()</h2>
                 <p>Our goal is to have as many compiling targets for MIK as possible. As of now we only have c, but assembly as well as webassembly.</p>
-            </div>
+			</div>
         </div>
     
      <footer>
